add fonts and colors

--- a/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -20,23 +20,23 @@
 		<span class="sg-label">#eee</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #337ab7;"></span>
-		<span class="sg-label">#337ab7</span>
+		<span class="sg-swatch" style="background: #dd3333;"></span>
+		<span class="sg-label">#dd3333</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #5cb85c;"></span>
-		<span class="sg-label">#5cb85c</span>
+		<span class="sg-swatch" style="background: #99ce30;"></span>
+		<span class="sg-label">#99ce30</span>
 	</li>
 	<li>
-		<span class="sg-swatch" style="background: #5bc0de;"></span>
-		<span class="sg-label">#5bc0de</span>
+		<span class="sg-swatch" style="background: #369292;"></span>
+		<span class="sg-label">#369292</span>
 	</li>
 		<li>
-		<span class="sg-swatch" style="background: #f0ad4e;"></span>
-		<span class="sg-label">#f0ad4e</span>
+		<span class="sg-swatch" style="background: #dd8033;"></span>
+		<span class="sg-label">#dd8033</span>
 	</li>
 		<li>
-		<span class="sg-swatch" style="background: #d9534f;"></span>
-		<span class="sg-label">#d9534f</span>
+		<span class="sg-swatch" style="background: #dd3333;"></span>
+		<span class="sg-label">#dd3333</span>
 	</li>
 </ul>
