--- a/source/_meta/_00-head.mustache
+++ b/source/_meta/_00-head.mustache
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link rel="stylesheet" href="../../css/main.css" media="all" />
-
+		<link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro:400,400i,700" rel="stylesheet"> 
+		
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		{{{ patternLabHead }}}
 		<!-- End Pattern Lab -->
