--- a/source/_patterns/01-molecules/01-media/00-jumbotron.mustache
+++ b/source/_patterns/01-molecules/01-media/00-jumbotron.mustache
@@ -1,8 +1,10 @@
 <div class="jumbotron">
+	<div class="container">
     <h1>{{ heading }}</h1>
     <p>{{ text }}</p>
-	{{# cta }}
-	<p><a class="btn btn-primary btn-lg" href="{{ url }}" role="button">{{ cta }}</a></p>
-	{{/ cta }}
+		{{# cta }}
+		<p><a class="btn btn-primary btn-lg" href="{{ url }}" role="button">{{ cta }}</a></p>
+		{{/ cta }}
+		</div>
 </div>
 
