--- a/source/_patterns/02-organisms/00-navigation/00-navbar.mustache
+++ b/source/_patterns/02-organisms/00-navigation/00-navbar.mustache
@@ -1,5 +1,5 @@
 <nav class="navbar {{ navbarClass }}">
-	<div class="container-fluid">
+	<div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     	<div class="navbar-header"> <!-- d -->
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -14,7 +14,6 @@
 			{{# navbarNavFirst }}
 			{{> molecules-navbar-nav }}
 			{{/ navbarNavFirst }}
-	  		{{> molecules-navbar-form }}
 	  		{{# navbarNavLast }}
 			{{> molecules-navbar-nav }}
 			{{/ navbarNavLast }}
